Fixed bug #25636 (SNMP Session not closed on success). Patch by: nesslage[at]mwsc[dot]edu